...

            <include
                android:id="@+id/customActionBar"
                layout="@layout/action_bar_custom_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toTopOf="@id/your_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <FrameLayout
                android:id="@+id/your_placeholder"
...
