...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp">

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/contactsProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/contactsProgress"
        app:layout_constraintStart_toStartOf="@id/contactsProgress"
        app:layout_constraintTop_toTopOf="@id/contactsProgress" />

    <TextView
        android:id="@+id/contactsGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="@id/contactsProgress"
        app:layout_constraintStart_toStartOf="@id/contactsProgress"
        app:layout_constraintTop_toBottomOf="@id/contactsProgressMark" />

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/bbSignedProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/bbSignedProgress"
        app:layout_constraintStart_toStartOf="@id/bbSignedProgress"
        app:layout_constraintTop_toTopOf="@id/bbSignedProgress" />

    <TextView
        android:id="@+id/bbsignedGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="@+id/bbSignedProgressMark"
        app:layout_constraintStart_toStartOf="@+id/bbSignedProgressMark"
        app:layout_constraintTop_toBottomOf="@+id/bbSignedProgressMark" />

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/underContractProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/underContractProgress"
        app:layout_constraintStart_toStartOf="@id/underContractProgress"
        app:layout_constraintTop_toTopOf="@id/underContractProgress" />

    <TextView
        android:id="@+id/underContactGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
        app:layout_constraintEnd_toEndOf="@+id/underContractProgressMark"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/underContractProgressMark"
        app:layout_constraintTop_toBottomOf="@+id/underContractProgressMark" />

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/appointmentsProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/appointmentsProgress"
        app:layout_constraintStart_toStartOf="@id/appointmentsProgress"
        app:layout_constraintTop_toTopOf="@id/appointmentsProgress" />

    <TextView
        android:id="@+id/appointmentsGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="@id/appointmentsProgress"
        app:layout_constraintStart_toStartOf="@id/appointmentsProgress"
        app:layout_constraintTop_toBottomOf="@+id/appointmentsProgressMark" />

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/listingsTakenProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:max="500"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/listingsTakenProgress"
        app:layout_constraintStart_toStartOf="@id/listingsTakenProgress"
        app:layout_constraintTop_toTopOf="@id/listingsTakenProgress" />

    <TextView
        android:id="@+id/listingsTakenGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="@id/listingsTakenProgress"
        app:layout_constraintStart_toStartOf="@id/listingsTakenProgress"
        app:layout_constraintTop_toBottomOf="@+id/listingsTakenProgressMark" />

    <co.sisu.mobile.utils.CircularProgressBar
        android:id="@+id/closedProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:max="500"
...
        android:textSize="@dimen/font_larger"
        app:layout_constraintEnd_toEndOf="@id/closedProgress"
        app:layout_constraintStart_toStartOf="@id/closedProgress"
        app:layout_constraintTop_toTopOf="@id/closedProgress" />

    <TextView
        android:id="@+id/closedGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
...
